Menu esta feito

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/mobile-first.css" media="all">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-    <link rel="stylesheet" href="/css/desktop-tablet.css" media="only screen and (min-width: 600px)">
+    <link rel="stylesheet" href="/css/desktop-tablet.css" media="only screen and (min-width: 668px)">
 </head>
 <body>
     <menu>
@@ -18,10 +18,10 @@
                     <span class="material-icons">menu</span>
                 </button>
             </li>
-            <li class="hidden"><a href="#">BAND</a></li>
-            <li class="hidden"><a href="#">TOUR</a></li>
-            <li class="hidden"><a href="#">CONTACT</a></li>
-            <li class="small-menu hidden"><a href="#">MERCH</a></li>
+            <li class="hidden"><a href="#" class="long-link">BAND</a></li>
+            <li class="hidden"><a href="#" class="long-link">TOUR</a></li>
+            <li class="hidden"><a href="#" class="long-link">CONTACT</a></li>
+            <li class="small-menu hidden"><a href="#" class="long-link">MERCH</a></li>
             <li class="big-menu hidden drop">
                 <a href="#" class="adrop">MORE</a>
                 <div class="drop-content">
@@ -31,7 +31,7 @@
                 </div>
             </li>
             <li class="big-menu hidden end">
-                <input type="text" name="search" id="search">
+                <span class="material-icons">search</span>
             </li>
         </ul>
     </menu>
