Header and section band it's done

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                     <span class="material-icons">menu</span>
                 </button>
             </li>
-            <li class="hidden"><a href="#" class="long-link">BAND</a></li>
-            <li class="hidden"><a href="#" class="long-link">TOUR</a></li>
-            <li class="hidden"><a href="#" class="long-link">CONTACT</a></li>
-            <li class="small-menu hidden"><a href="#" class="long-link">MERCH</a></li>
+            <li class="hidden hidden2"><a href="#" class="long-link hidden2">BAND</a></li>
+            <li class="hidden"><a href="#" class="long-link hidden2">TOUR</a></li>
+            <li class="hidden"><a href="#" class="long-link hidden2">CONTACT</a></li>
+            <li class="small-menu hidden hidden2"><a href="#" class="long-link">MERCH</a></li>
             <li class="big-menu hidden drop">
                 <a href="#" class="adrop">MORE</a>
                 <div class="drop-content">
@@ -40,17 +40,28 @@
     </header>
 
     <div class="container">
-        <section class="band">
+        <section class="band section-dad">
             <article class="art-band">
                 <h2>THE BAND</h2>
-                <h3>We love music</h3>
+                <h3><em>We love music</em></h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit accusantium sapiente repudiandae sed ipsum, iste maiores repellat, voluptates architecto beatae natus sequi atque libero veritatis. Porro quibusdam at praesentium ut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum molestias sequi voluptas provident eaque autem fugit, ipsa nam dolorum velit amet in eligendi illo error, ducimus commodi, corrupti necessitatibus iusto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad voluptas ducimus commodi excepturi quia laborum veniam. Nobis doloremque debitis facere molestias, sed quas ducimus obcaecati, mollitia doloribus beatae sint aut.
+                    We have created a fictional band website. Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit accusantium sapiente repudiandae sed ipsum, iste maiores repellat, voluptates architecto beatae natus sequi atque libero veritatis. Porro quibusdam at praesentium ut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum molestias sequi voluptas provident eaque autem fugit, ipsa nam dolorum velit amet in eligendi illo error, ducimus commodi, corrupti necessitatibus iusto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad voluptas ducimus commodi excepturi quia laborum veniam. Nobis doloremque debitis facere molestias, sed quas ducimus obcaecati, mollitia doloribus beatae sint aut.
                 </p>
+                <section class="image-section">
+                    <div>
+                        Name
+                        <img src="imagens/band/bandmember.jpg" alt="fotographer"></div>
+                    <div>
+                        Name
+                        <img src="imagens/band/bandmember.jpg" alt="fotographer"></div>
+                    <div>
+                        Name
+                        <img src="imagens/band/bandmember.jpg" alt="fotographer"></div>
+                </section>
             </article>
         </section>
 
-        <section class="tour">
+        <section class="tour section-dad">
             <article class="art-tour">
                 <h2>TOUR DATES</h2>
                 <h3>Remember to book your tickets!</h3>
@@ -102,7 +113,7 @@
             </article>
         </section>
 
-        <section class="contact">
+        <section class="contact section-dad">
             <article class="art-contact">
                 <h2>CONTACT</h2>
                 <h3>Fan? Drop a note!</h3>
@@ -127,7 +138,7 @@
             </article>
         </section>
 
-        <section class="map">
+        <section class="map section-dad">
 
         </section>
     </div>
