atualizando as ligações

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Band</title>
-    <link rel="stylesheet" href="/css/mobile-first.css" media="all">
+    <link rel="stylesheet" href="css/mobile-first.css" media="all">
+    <link rel="stylesheet" href="css/desktop-tablet.css" media="only screen and (min-width: 668px)">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-    <link rel="stylesheet" href="/css/desktop-tablet.css" media="only screen and (min-width: 668px)">
 </head>
 <body>
     <menu>
