Refiting the content

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
                 </p>
                 <section class="image-section">
                     <div>
-                        Name
+                        <p>Name</p>
                         <img src="imagens/band/bandmember.jpg" alt="fotographer"></div>
                     <div>
-                        Name
+                        <p>Name</p>
                         <img src="imagens/band/bandmember.jpg" alt="fotographer"></div>
                     <div>
-                        Name
+                        <p>Name</p>
                         <img src="imagens/band/bandmember.jpg" alt="fotographer"></div>
                 </section>
             </article>
@@ -128,12 +128,12 @@
                         <p class="p-contact">Email:mail@mail.com</p>
 
                     </div>
-                    <form action="contact.php" method="get" class="contact-manipulation">
+                    <!--<form action="contact.php" method="get" class="contact-manipulation">
                         <input type="text" name="name" id="iname" required placeholder="Name">
                         <input type="text" name="mail" id="imail" required placeholder="mail">
                         <textarea name="message" id="imessage" cols="30" rows="1" placeholder="Message"></textarea>
                         <input type="submit" value="SEND">
-                    </form>
+                    </form>-->
                 </section>
             </article>
         </section>
