--- a/index.html
+++ b/index.html
@@ -41,28 +41,28 @@
 
     <div class="container">
         <section class="band section-dad">
-            <article class="art-band">
-                <h2>THE BAND</h2>
+            <article class="art-band son">
+                <h2>THE  BAND</h2>
                 <h3><em>We love music</em></h3>
                 <p>
-                    We have created a fictional band website. Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit accusantium sapiente repudiandae sed ipsum, iste maiores repellat, voluptates architecto beatae natus sequi atque libero veritatis. Porro quibusdam at praesentium ut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum molestias sequi voluptas provident eaque autem fugit, ipsa nam dolorum velit amet in eligendi illo error, ducimus commodi, corrupti necessitatibus iusto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad voluptas ducimus commodi excepturi quia laborum veniam. Nobis doloremque debitis facere molestias, sed quas ducimus obcaecati, mollitia doloribus beatae sint aut.
+                    We have created a fictional band website. Velit accusantium sapiente repudiandae sed ipsum, iste maiores repellat, voluptates architecto beatae natus sequi atque libero veritatis. Porro quibusdam at praesentium ut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum molestias sequi voluptas provident eaque autem fugit, ipsa nam dolorum velit amet in eligendi illo error, ducimus commodi, corrupti necessitatibus iusto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad voluptas ducimus commodi excepturi quia laborum veniam.
                 </p>
                 <section class="image-section">
-                    <div>
-                        <p>Name</p>
+                    <div class="container-img">
+                        <p class="imgP">Name</p>
                         <img src="imagens/band/bandmember.jpg" alt="fotographer"></div>
-                    <div>
-                        <p>Name</p>
+                    <div class="container-img">
+                        <p class="imgP">Name</p>
                         <img src="imagens/band/bandmember.jpg" alt="fotographer"></div>
-                    <div>
-                        <p>Name</p>
+                    <div class="container-img">
+                        <p class="imgP">Name</p>
                         <img src="imagens/band/bandmember.jpg" alt="fotographer"></div>
                 </section>
             </article>
         </section>
 
         <section class="tour section-dad">
-            <article class="art-tour">
+            <article class="art-tour son">
                 <h2>TOUR DATES</h2>
                 <h3>Remember to book your tickets!</h3>
 
@@ -114,7 +114,7 @@
         </section>
 
         <section class="contact section-dad">
-            <article class="art-contact">
+            <article class="art-contact son">
                 <h2>CONTACT</h2>
                 <h3>Fan? Drop a note!</h3>
 
