terminei section band

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Band</title>
     <link rel="stylesheet" href="css/mobile-first.css" media="all">
-    <link rel="stylesheet" href="css/desktop-tablet.css" media="only screen and (min-width: 668px)">
+    <link rel="stylesheet" href="css/desktop-tablet.css" media="only screen and (min-width: 600px)">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 </head>
@@ -63,8 +63,8 @@
 
         <section class="tour section-dad">
             <article class="art-tour son">
-                <h2>TOUR DATES</h2>
-                <h3>Remember to book your tickets!</h3>
+                <h2 class="headingTour">TOUR DATES</h2>
+                <h3 class="headingTour">Remember to book your tickets!</h3>
 
                 <section class="avail-tickets">
                     <div class="avaliable-tickets">September Sold out</div>
