configurando área dos bilhetes

--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
         <section class="tour section-dad">
             <article class="art-tour son">
                 <h2 class="headingTour">TOUR DATES</h2>
-                <h3 class="headingTour">Remember to book your tickets!</h3>
+                <h3 class="headingTour1"><em>Remember to book your tickets!</em></h3>
 
                 <section class="avail-tickets">
-                    <div class="avaliable-tickets">September Sold out</div>
-                    <div class="avaliable-tickets">Octuber Sold out</div>
-                    <div class="avaliable-tickets">November 3</div>
+                    <div class="avaliable-tickets">September <span class="ticket-info">Sold out</span></div>
+                    <div class="avaliable-tickets">Octuber <span class="ticket-info">Sold out</span></div>
+                    <div class="avaliable-tickets">November <span class="ticket-info1">3</span></div>
                 </section>
 
                 <section class="buy-ticket">
