Secção Tour terminada

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
 
                 <section class="buy-ticket">
                     <div class="each-buy">
-                        <img src="" alt="">
+                        <img src="imagens/tour/newyork.jpg" alt="New Yourk">
                         <div>
-                            <h2>New York</h2>
-                            <p>Fri 27 Nov 2016</p>
-                            <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                            <h2 class="content-buy1">New York</h2>
+                            <p class="content-buy2">Fri 27 Nov 2016</p>
+                            <p class="content-buy">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
                             <button>
                                 <a href="#">Buy Tickets</a>
                             </button>
@@ -86,11 +86,11 @@
                     </div>
 
                     <div class="each-buy">
-                        <img src="" alt="">
+                        <img src="imagens/tour/paris.jpg" alt="Paris">
                         <div>
-                            <h2>New York</h2>
-                            <p>Fri 27 Nov 2016</p>
-                            <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                            <h2 class="content-buy1">New York</h2>
+                            <p class="content-buy2">Fri 27 Nov 2016</p>
+                            <p class="content-buy">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
                             <button>
                                 <a href="#">Buy Tickets</a>
                             </button>
@@ -98,11 +98,11 @@
                     </div>
 
                     <div class="each-buy">
-                        <img src="" alt="">
+                        <img src="imagens/tour/sanfran.jpg" alt="San Francisc">
                         <div>
-                            <h2>New York</h2>
-                            <p>Fri 27 Nov 2016</p>
-                            <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
+                            <h2 class="content-buy1">New York</h2>
+                            <p class="content-buy2">Fri 27 Nov 2016</p>
+                            <p class="content-buy">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
                             <button>
                                 <a href="#">Buy Tickets</a>
                             </button>
