Pending changes exported from your codespace

--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@
 
     <footer>
         <article>
-            <span><!--ICON FACEBOOK--></span>
-            <span><!--ICON INSTAGRAM--></span>
-            <span><!--ICON SNAPCHT--></span>
-            <span><!--ICON P--></span>
-            <span><!--ICON TWITTER--></span>
-            <span><!--ICON LINKDIN--></span>
+            <span class="material-icons">facebook<!--ICON FACEBOOK--></span>
+            <span class="material-icons"><!--ICON INSTAGRAM--></span>
+            <span class="material-icons"><!--ICON SNAPCHT--></span>
+            <span class="material-icons"><!--ICON P--></span>
+            <span class="material-icons"><!--ICON TWITTER--></span>
+            <span class="material-icons"><!--ICON LINKDIN--></span>
         </article>
     </footer>
 </body>
