--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
 
         <section class="map-location">
             <!--Aqui irá uma imagem como background-->
+            <img id="mapa" src="imagens/map.jpg" alt="local">
         </section>
     </div>
 
@@ -183,13 +184,9 @@
         <section class="midd">
             <div class="icons">
                 <span class="material-icons">facebook</span>
-                <span class="material-icons">instagram</span>
                 <span class="material-icons">snapchat</span>
-                <span class="material-icons">twitter</span>
-                <span class="material-icons"></span>
-                <span class="material-icons"></span>
             </div>    
-            <p>Powered by <a href="https://github.com/FanioPanga-23?tab=repositories">Fânio Panga</a></p> 
+            <p>Powered by <a class="last-link" href="https://github.com/FanioPanga-23?tab=repositories">Fânio Panga</a></p> 
         </section>
     </footer>
 
